// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Recovery Phrase Component should match snapshot 1`] = `
<div>
  <div
    class="mm-box recovery-phrase mm-box--display-flex mm-box--gap-6 mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--height-full"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="review-srp-back-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Step 2 of 3
        </p>
        <h2
          class="mm-box mm-text mm-text--heading-lg mm-box--color-text-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-6"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-6 mm-box--color-text-alternative"
        >
          <span>
             
            This is your 
            <button
              class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            >
              Secret Recovery Phrase
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. 
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-alternative"
            >
              Don’t share it with anyone, ever.
            </p>
            
             
          </span>
        </p>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box recovery-phrase__secret mm-box--padding-4 mm-box--display-grid mm-box--width-full mm-box--background-color-background-section mm-box--rounded-lg"
        >
          <div
            class="mm-box recovery-phrase__chips recovery-phrase__chips--hidden mm-box--display-grid mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-0"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                1
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                debris
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-1"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                2
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                dizzy
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-2"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                3
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                just
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-3"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                4
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                program
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-4"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                5
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                just
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-5"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                6
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                float
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-6"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                7
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                decrease
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-7"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                8
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                vacant
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-8"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                9
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                alarm
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-9"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                10
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                reduce
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-10"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                11
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                speak
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-11"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                12
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                stadium
              </p>
            </div>
          </div>
          <div
            class="mm-box recovery-phrase__secret-blocker-container mm-box--width-full mm-box--height-full"
          >
            <div
              class="mm-box recovery-phrase__secret-blocker mm-box--padding-top-2 mm-box--padding-bottom-9 mm-box--padding-inline-0 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--rounded-sm"
            />
            <button
              class="mm-box recovery-phrase__secret-blocker-text mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--background-color-transparent"
              data-testid="recovery-phrase-reveal"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-default"
                style="mask-image: url('./images/icons/eye-slash.svg');"
              />
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
              >
                Tap to reveal
              </p>
              <p
                class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
              >
                Make sure no one is watching your screen.
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--width-full"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--disabled recovery-phrase__footer--button mm-button-primary mm-button-primary--disabled mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
        data-testid="recovery-phrase-continue"
        disabled=""
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot after reveal recovery button is clicked 1`] = `
<div>
  <div
    class="mm-box recovery-phrase mm-box--display-flex mm-box--gap-6 mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--height-full"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="review-srp-back-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Step 2 of 3
        </p>
        <h2
          class="mm-box mm-text mm-text--heading-lg mm-box--color-text-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-6"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-6 mm-box--color-text-alternative"
        >
          <span>
             
            This is your 
            <button
              class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            >
              Secret Recovery Phrase
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. 
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-alternative"
            >
              Don’t share it with anyone, ever.
            </p>
            
             
          </span>
        </p>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box recovery-phrase__secret mm-box--padding-4 mm-box--display-grid mm-box--width-full mm-box--background-color-background-section mm-box--rounded-lg"
        >
          <div
            class="mm-box recovery-phrase__chips mm-box--display-grid mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-0"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                1
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                debris
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-1"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                2
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                dizzy
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-2"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                3
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                just
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-3"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                4
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                program
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-4"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                5
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                just
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-5"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                6
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                float
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-6"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                7
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                decrease
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-7"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                8
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                vacant
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-8"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                9
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                alarm
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-9"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                10
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                reduce
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-10"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                11
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                speak
              </p>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-11"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                12
                .
              </p>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
              >
                stadium
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--width-full"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg recovery-phrase__footer--button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
        data-testid="recovery-phrase-continue"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;
